      resources. The InputStream resource leak was negligible due to the one
      time static use of the InputStream (iss #395).

version 9.39 (2022-07-22)
    * Adds static ErrorObject.removeIllegalChars method that removes any
      characters from the specified string that are not within the legal range
      for OAuth 2.0 error codes and messages. See RFC 6749, section 5.2.
    * Updates ErrorObject.parse methods to remove illegal characters from an
      error_description instead of setting the entire parsed error description
      string to null.

version 9.39.1 (2022-08-09)
    * Fixes NPE in TokenExchangeGrant.equals (iss #396).

version 9.40 (2022-08-09)
    * Adds JSONObjectUtils.getURL(JSONObject,String,URL) method.

version 9.41 (2022-08-11)
    * Adds OAuth2Error.INVALID_TARGET, deprecates INVALID_RESOURCE (for RFC
      8707 conformance).

version 9.41.1 (2022-08-26)
    * Updates Nimbus JOSE+JWT to 9.24.3
    * Updates optional Google Tink to 1.7.0.
    * Updates optional transitive dependencies to OpenSAML 3.x
      org.apache.santuario:xmlsec and ommons-codec:commons-codec to address
      CVEs reported by Snyk.

version 9.42 (2022-09-01)
    * Updates JWTAuthentication and JWTAuthenticationClaimsSet classes to
      support iss != sub (iss #393).
    * Updates and fixes OSGi manifest (iss #399).

version 9.43 (2022-09-03)
    * Adds dpop_jkt (DPoP JWK SHA-256 thumbprint parameter) support to
      AuthorizationRequest and AuthenticationRequest.
    * Adds nonce support to DPoPUtils and DPoPProofFactory.
    * Adds nonce support to DPoPTokenRequestVerifier and
      DPoPProtectedResourceRequestVerifier.
    * Adds DPoP-Nonce header support to HTTPResponse.
    * Adds OAuth2Error.USE_DPOP_NONCE constant.
    * Adds DPoPTokenError.USE_DPOP_NONCE constant.

version 9.43.1 (2022-09-09)
    * Updates Nimbus JOSE+JWT to 9.24.4

version 9.44 (2022-09-30)
    * Updates TrustMarkClaimsSet to OpenID Connect Federation 1.0 - draft 22.