@@ -2088,3 +2088,5 @@ version 9.43.1 (2022-09-09)
 
 version 9.44 (2022-09-30)
     * Updates TrustMarkClaimsSet to OpenID Connect Federation 1.0 - draft 22.
+    * Updates FederationMetadataType to OpenID Connect Federation 1.0 - draft
+      22.
